# timedctl-rs

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .semrelrc  API_PROGRESS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MIGRATION_STATUS.md  README.md  STREAMDECK.md  flake.nix
.cargo/: bump.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-release.yml  ci.yml  release.yml
agent/: API_COMPATIBILITY_TESTING.md  API_PROGRESS.md  IMPLEMENTATION_SUMMARY.md
src/: api_compatibility_test.rs  auth.rs  config.rs  handlers.rs  lib.rs  main.rs  models.rs  models_test.rs  transforms.rs
src/handlers/: absence.rs  activity.rs  attendance.rs  config.rs  data.rs  report.rs  statistics.rs
tests/: api_compatibility_tests.rs  integration_tests.rs
tests/integration/: client_test.rs  mod.rs  models_test.rs
